A couple important (global) changes
1.  I changed the arguments on the select box macro in GlobalMacros.vm
It now takes a business object (AttributeValue) and a String field name
that matches a field name in intake. (it is more flexible this way.)

2.  I swapped the order of columns in R_Module_Attribute to match the order of
names in the table name.  I think this is less confusing.


The rest is related to getting the issue entry working.  You can now
enter an issue, though the dedupe page currently shows all issues as
potential dupes.  The search is not implemented.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.22 2001/04/05 19:18:38 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.23 2001/04/06 23:34:01 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -46,7 +46,7 @@ services.TurbineLoggingService.debug.level=INFO
 # A facility for SQL query logging
 # To enable SQL query logging, set the level to DEBUG
 services.TurbineLoggingService.sql.destination.file=/logs/turbine.log
-#services.TurbineLoggingService.sql.destination.console=true
+services.TurbineLoggingService.sql.destination.console=true
 services.TurbineLoggingService.sql.className=org.apache.turbine.services.logging.FileLogger
 services.TurbineLoggingService.sql.level=ERROR
 
