implementing AttributeEditOptions.vm template displays correct data, but action is not yet fully implemented.
removed Error.vm property as it does not exist and the Error screen works
better without it.

note some try/catch blocks for debugging, because exceptions are being swallowed
 somewhere and not reported.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.24 2001/04/09 00:09:34 jon Exp $
+# $Id: TurbineResources.properties,v 1.25 2001/04/10 06:23:48 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -262,7 +262,7 @@ screen.login=Login
 #
 # Default: /Error.wm
 
-template.error=Error.vm
+#template.error=Error.vm
 
 # This is the default error screen.
 #
