Added custom Priority paramater parsing capability to config/PropertySetter.java.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/test/Makefile
+++ b/src/java/org/apache/log4j/test/Makefile
@@ -22,7 +22,7 @@ JSOURCES:= Shallow.java\
  UnitTestCategory.java\
  UnitTestCyclicBuffer.java\
  UnitTestBoundedFIFO.java\
- UnitTestVarSubst.java\
+ UnitTestOptionConverter.java\
  SocketAppenderTest.java\
  PrintProperties.java\
  UnitTestOR.java\
