Preparing 1.1b2 for release
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/xdocs/velocity.properties
+++ b/src/xdocs/velocity.properties
@@ -1,2 +1,3 @@
-resource.loader.1.resource.path=../../jakarta-site2/xdocs/stylesheets
+resource.loader.1.resource.path=../../../jakarta-site2/xdocs/stylesheets
+
 
