A convoluted but seemingly working attempt at resolving the setMaxFileSize problem.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/Makefile
+++ b/src/java/org/apache/log4j/Makefile
@@ -8,6 +8,7 @@ JSOURCES:=HTMLLayout.java\
 	PatternLayout.java\
 	AsyncAppender.java\
 	NDC.java\
+	RollingFileAppenderBeanInfo.java\
 	AppenderSkeleton.java\
 	CategoryKey.java\
 	ProvisionNode.java\
