Defaulted mail.debug property to false.

--- a/src/etc/conf/default/mail.properties
+++ b/src/etc/conf/default/mail.properties
@@ -4,4 +4,4 @@ mail.user				= biorn_steedom
 mail.pop3.host			= pop.mail.yahoo.com
 mail.smtp.host			= smtp.mail.yahoo.com
 mail.from				= biorn_steedom@yahoo.com
-mail.debug				= true
+mail.debug				= false
