Patch #417793 -- Use log names for log4j categories. Submitted By: David Jencks (d_jencks)

--- a/src/etc/conf/default/log4j.properties
+++ b/src/etc/conf/default/log4j.properties
@@ -11,6 +11,8 @@ log4j.appender.Default.layout=org.apache.log4j.PatternLayout
 log4j.appender.Default.layout.ConversionPattern=[%x] %m%n
 # Truncate if it aleady exists.
 log4j.appender.Default.Append=false
+#Example of turning off logging for a category. Uncomment to turn off.
+#log4j.category.DefaultDS=FATAL
 
 ### The console appender
 log4j.appender.Console=org.apache.log4j.FileAppender
