Make the Log4jService the default logging service

--- a/src/etc/conf/default/log4j.properties
+++ b/src/etc/conf/default/log4j.properties
@@ -19,4 +19,4 @@ log4j.appender.Console=org.apache.log4j.FileAppender
 log4j.appender.Console.File=System.out
 log4j.appender.Console.Threshold=INFO
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
-log4j.appender.Console.layout.ConversionPattern=[%x] %m%n
+log4j.appender.Console.layout.ConversionPattern=[%c] %m%n
