--- a/src/etc/conf/default/jboss.conf
+++ b/src/etc/conf/default/jboss.conf
@@ -10,24 +10,10 @@
    <ARG TYPE="java.lang.String" VALUE="./">
 </MLET>
 
-<!-- Logging services. Typically you should enable the the ConsoleLogging &
-	FileLogging mbeans or the Log4jService. Both can be enabled if desired
-	but the Log4jService can perform the ConsoleLogging & FileLogging
-	services in additional to that offered by the log4j package. -->
-<MLET CODE = "org.jboss.logging.ConsoleLogging" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
-   <ARG TYPE="java.lang.String" VALUE="Information,Warning,Error">
-   <ARG TYPE="java.lang.String" VALUE="[{2}] {4}">
-</MLET>
-<MLET CODE = "org.jboss.logging.FileLogging" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
-   <ARG TYPE="java.lang.String" VALUE="Information,Debug,Warning,Error">
-   <ARG TYPE="java.lang.String" VALUE="[{2}] {4}">
-</MLET>
-
-<!-- Uncomment to use the log4j based logging service and with the log4j.properties.
-	When this service is used the ConsoleLogging & FileLogging should be disabled.
+<!-- The log4j based logging service based on the conf log4j.properties file
  -->
-<-- MLET CODE = "org.jboss.logging.Log4jService" ARCHIVE="jboss.jar,log4j.jar" CODEBASE="../../lib/ext/">
-<-- /MLET>
+<MLET CODE = "org.jboss.logging.Log4jService" ARCHIVE="jboss.jar,log4j.jar" CODEBASE="../../lib/ext/">
+</MLET>
 
 <MLET CODE = "org.jboss.util.Info" ARCHIVE="jboss.jar" CODEBASE="../../lib/ext/">
 </MLET>
