Missed updating the server.log ConversionPattern

--- a/src/etc/conf/default/log4j.properties
+++ b/src/etc/conf/default/log4j.properties
@@ -8,7 +8,7 @@ log4j.appender.Default=org.apache.log4j.FileAppender
 log4j.appender.Default.File=../log/server.log
 log4j.appender.Default.layout=org.apache.log4j.PatternLayout
 # Use the default JBoss format
-log4j.appender.Default.layout.ConversionPattern=[%x] %m%n
+log4j.appender.Default.layout.ConversionPattern=[%c] %m%n
 # Truncate if it aleady exists.
 log4j.appender.Default.Append=false
 #Example of turning off logging for a category. Uncomment to turn off.
