Updated defaults to show the rmiPort option

--- a/src/etc/conf/default/jnp.properties
+++ b/src/etc/conf/default/jnp.properties
@@ -1,3 +1,5 @@
-# JNP server configuration
+### JNP server configuration
+# The port the JNDI naming service listens on
 jnp.port=1099
-jnp.log=false
+# The port the RMI NamingServer is exported on, 0 = bind any available port
+jnp.rmiPort=0
