- InvalidJarIndexException is only available in JDK 1.3.  Referring    to this exception type caused log4j 1.1b5 to break on earlier JDKs.    We now avoid referring to it. [*]
 - Aaron Greenhouse found a series of multi-threading related bugs in
   Category and AsyncAppender. See bug ids 1505 and 1507 in our bug
   database for examplary bug reports. [*]

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/Makefile
+++ b/src/java/org/apache/log4j/Makefile
@@ -8,7 +8,6 @@ JSOURCES:=HTMLLayout.java\
 	PatternLayout.java\
 	AsyncAppender.java\
 	NDC.java\
-	RollingFileAppenderBeanInfo.java\
 	AppenderSkeleton.java\
 	CategoryKey.java\
 	ProvisionNode.java\
@@ -24,6 +23,11 @@ JSOURCES:=HTMLLayout.java\
 	Priority.java\
 	WriterAppender.java\
 	ConsoleAppender.java\
+
+ifdef $(ISJDK1)
+ JSOURCES:=$(JSOURCES) RollingFileAppenderBeanInfo.java
+endif
+
 
 SUBDIRS :=helpers spi config or xml net nt varia test performance examples 
 
