--- a/src/java/org/apache/log4j/test/Makefile
+++ b/src/java/org/apache/log4j/test/Makefile
@@ -25,7 +25,11 @@ JSOURCES:= Shallow.java\
  UnitTestOptionConverter.java\
  SocketAppenderTest.java\
  PrintProperties.java\
- UnitTestOR.java\
+
+
+ifdef $(ISJDK1)
+  JSOURCES:=$(JSOURCES)  UnitTestOR.java
+endif
 
 SUBDIRS :=
 
