Added Aaron Greenhouse's fixes to Category and AsyncAppender. Added Simon Kitching's RangeFilter.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/varia/Makefile
+++ b/src/java/org/apache/log4j/varia/Makefile
@@ -6,6 +6,7 @@ JSOURCES:=ExternallyRolledFileAppender.java\
 	  DenyAllFilter.java\
 	  StringMatchFilter.java\
 	  PriorityMatchFilter.java\
+	  PriorityRangeFilter.java\
 
 SUBDIRS :=test
 
