support for abstract tables in torque increased number of database connections Issue number: Obtained from: Submitted by: Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.25 2001/04/10 06:23:48 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.26 2001/05/10 23:05:35 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -179,7 +179,7 @@ database.default.password=
 
 # The number of database connections to cache per ConnectionPool
 # instance (specified per database).
-database.default.maxConnections=3
+database.default.maxConnections=30
 
 # The amount of time (in milliseconds) that database connections will be
 # cached (specified per database).
