--- a/src/etc/conf/default/log4j.properties
+++ b/src/etc/conf/default/log4j.properties
@@ -15,7 +15,7 @@ log4j.appender.Default.Append=false
 #log4j.category.DefaultDS=FATAL
 
 ### The console appender
-log4j.appender.Console=org.jboss.logging.ConsoleAppender
+log4j.appender.Console=org.jboss.logging.log4j.ConsoleAppender
 log4j.appender.Console.Threshold=INFO
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=[%c] %m%n
