stuff for data dump/load

--- a/src/conf/torque.props
+++ b/src/conf/torque.props
@@ -143,6 +143,9 @@ OMControlTemplate = om/Control.vm
 IntakeControlTemplate = intake/Control.vm
 ServiceControlTemplate = service/Control.vm
 idTableControlTemplate = sql/id-table/Control.vm
+DataDTDControlTemplate = data/Control.vm
+DataDumpControlTemplate = data/dump/Control.vm
+DataSQLControlTemplate = sql/load/Control.vm
 
 # -------------------------------------------------------------------
 # 
