--- a/src/conf/torque.props
+++ b/src/conf/torque.props
@@ -153,7 +153,7 @@ DataSQLControlTemplate = sql/load/Control.vm
 #
 # -------------------------------------------------------------------
 
-outputDirectory=../../../../../../src/java/
+outputDirectory=../../../../../../src/
 
 # -------------------------------------------------------------------
 # 
