more baby steps in the right direction towards abstraction of the Module layer. note: i'm not finished yet, but i'm doing things in steps in order to keep the number of compile errors down and make it easier to do the abstraction. things are looking very positive at this point.
-jon

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -15,3 +15,7 @@ scarab.instance.name=myscarab
 # The search/index implementation
 searchindex.class=org.tigris.scarab.util.word.LuceneAdaptor
 searchindex.path=/WEB-INF/index
+
+# The Module Service
+services.ScarabModuleService.classname=org.tigris.scarab.services.module.ModuleServiceImpl
+services.ScarabModuleService.scarab.module.class=org.tigris.scarab.om.Module
