Added support for custom priorities in ProppertyConfigurator.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/java/org/apache/log4j/test/Makefile
+++ b/src/java/org/apache/log4j/test/Makefile
@@ -25,6 +25,7 @@ JSOURCES:= Shallow.java\
  UnitTestOptionConverter.java\
  SocketAppenderTest.java\
  PrintProperties.java\
+ CustomCategoryTest.java\
 
 
 ifdef $(ISJDK1)
