Adapting to new jar structure

--- a/src/etc/jk/wrapper.properties
+++ b/src/etc/jk/wrapper.properties
@@ -1,7 +1,7 @@
 #
-# $Header: /tmp/cvs-vintage/tomcat/src/etc/jk/wrapper.properties,v 1.1 2000/09/09 23:21:20 costin Exp $
-# $Revision: 1.1 $
-# $Date: 2000/09/09 23:21:20 $
+# $Header: /tmp/cvs-vintage/tomcat/src/etc/jk/wrapper.properties,v 1.2 2001/05/20 20:27:21 nacho Exp $
+# $Revision: 1.2 $
+# $Date: 2001/05/20 20:27:21 $
 #
 #
 # jk_service.properties - a bootstrup file for the Tomcat NT service.
@@ -47,14 +47,14 @@ wrapper.java_home=<put your Java home>
 # output of Tomcat. This is where System.out.println and
 # System.err.println goes to.
 #
-wrapper.stdout=$(wrapper.tomcat_home)\jvm.stdout
-wrapper.stderr=$(wrapper.tomcat_home)\jvm.stderr
+wrapper.stdout=$(wrapper.tomcat_home)\logs\jvm.stdout
+wrapper.stderr=$(wrapper.tomcat_home)\logs\jvm.stderr
 
 #
 # Additions to the path. put here directories where you store DLLs for
 # native methods etc.
 #
-wrapper.ld_path=d:\
+wrapper.ld_path=$(wrapper.java_home)\jre\bin
 wrapper.ld_path=c:\
 
 #
@@ -64,20 +64,12 @@ wrapper.ld_path=c:\
 # If you have additional locations that you would like to add to the
 # claspath you should add a new wrapper.class_path=<location> line.
 #
-wrapper.class_path=$(wrapper.tomcat_home)\classes
-wrapper.class_path=$(wrapper.tomcat_home)\lib\xml.jar
-wrapper.class_path=$(wrapper.tomcat_home)\lib\webserver.jar
-wrapper.class_path=$(wrapper.tomcat_home)\lib\servlet.jar
-wrapper.class_path=$(wrapper.tomcat_home)\lib\jasper.jar
+wrapper.class_path=$(wrapper.tomcat_home)\lib\tomcat.jar
 
-#
-# This is where Javac is located in JDK1.2.x
-#
-wrapper.class_path=$(wrapper.java_home)\lib\tools.jar
 #
 # and a tribute to JDK1.1.x
 #
-wrapper.class_path=$(wrapper.java_home)\lib\classes.zip
+#wrapper.class_path=$(wrapper.java_home)\lib\classes.zip
 
 #
 # This is the Java interpreter used for running Tomcat
@@ -88,7 +80,7 @@ wrapper.javabin=$(wrapper.java_home)\bin\java.exe
 # This is Tomcat's startup class (the class that contains Tomcat's
 # starting point.
 #
-wrapper.startup_class=org.apache.tomcat.startup.Tomcat
+wrapper.startup_class=org.apache.tomcat.startup.Main
 
 #
 # This is the location where tomcat's server.xml configuration file 
@@ -114,4 +106,4 @@ wrapper.shutdown_protocol=ajp12
 # This is the command line that is used to start Tomcat. You can *add* extra
 # parameters to it but you can not remove anything.
 #
-wrapper.cmd_line=$(wrapper.javabin) -classpath $(wrapper.class_path) $(wrapper.startup_class) -config $(wrapper.server_xml) -home $(wrapper.tomcat_home)
+wrapper.cmd_line=$(wrapper.javabin)  -Dtomcat.home="$(wrapper.tomcat_home)" -classpath $(wrapper.class_path) $(wrapper.startup_class) -config $(wrapper.server_xml) 
