Ok, this is most of the rest of the conversion to using ModuleEntity as the interface. I *believe* i got everything, but i may have missed some stuff. the goal here is to never reference "Module" in the code directly. instead you should always reference ModuleEntity. if there is something missing from the interface that you need, then add it.

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -19,4 +19,4 @@ searchindex.path=/WEB-INF/index
 
 # The Module Service
 services.ScarabModuleService.classname=org.tigris.scarab.services.module.ModuleServiceImpl
-services.ScarabModuleService.scarab.module.class=org.tigris.scarab.om.Module
+services.ScarabModuleService.scarab.module.class=org.tigris.scarab.om.ScarabModule
