--- a/src/etc/conf/default/jndi.properties
+++ b/src/etc/conf/default/jndi.properties
@@ -1,3 +1,3 @@
 java.naming.factory.initial=org.jnp.interfaces.NamingContextFactory
-#java.naming.provider.url=localhost
+java.naming.provider.url=localhost
 java.naming.factory.url.pkgs=org.jboss.naming:org.jnp.interfaces
