adding flux templates and library
added a resources directory for ui tool

updated turbine and torque
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -11,7 +11,7 @@ tool.global.scarabG=org.tigris.scarab.tools.ScarabGlobalTool
 # from other instances that it may interact with (in the future).
 # It is the prefix to all issue id's created in response to an issue
 # entered against a module in this instance's database. 
-scarab.instance.name=myscarab
+scarab.domain.name=myscarab
 
 # The search/index implementation
 searchindex.class=org.tigris.scarab.util.word.LuceneAdaptor
