--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.26 2001/05/10 23:05:35 jon Exp $
+# $Id: TurbineResources.properties,v 1.27 2001/05/24 02:33:30 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -156,7 +156,7 @@ scheduledjob.cache.size=10
 # Default: org.apache.turbine.modules
 # -------------------------------------------------------------------
 
-module.packages=org.tigris.scarab
+module.packages=org.tigris.scarab,org.apache.turbine.flux.modules
 
 # -------------------------------------------------------------------
 # 
@@ -289,7 +289,7 @@ default.doctype=Html40Transitional
 # This is the default action to log a user in.
 # Default: LoginUser
 
-action.login=LoginUser
+action.login=Login
 
 # This is the default action to log a user out.
 
@@ -545,8 +545,9 @@ tool.request.page=org.apache.turbine.util.template.TemplatePageAttributes
 tool.request.content=org.apache.turbine.util.ContentURI
 tool.request.om=org.apache.turbine.om.OMTool
 tool.request.intake=org.apache.turbine.services.intake.IntakeTool
+tool.request.flux=org.apache.turbine.flux.tools.FluxTool
 
-#tool.global.ui=org.apache.turbine.services.pull.util.UIManager
+tool.global.ui=org.apache.turbine.services.pull.util.UIManager
 
 # The UI Manager will allow you to skin your Turbine
 # application using simple properties files that are
@@ -578,12 +579,12 @@ services.VelocityService.default.layout.template = /default.vm
 
 services.VelocityService.runtime.log=/logs/velocity.log
 #services.VelocityService.template.encoding=
-services.VelocityService.velocimacro.library = GlobalMacros.vm
+services.VelocityService.velocimacro.library = flux/GlobalMacros.vm,GlobalMacros.vm
 
 services.VelocityService.resource.loader = file
 services.VelocityService.file.resource.loader.description = Velocity File Resource Loader
 services.VelocityService.file.resource.loader.class = org.apache.velocity.runtime.resource.loader.FileResourceLoader
-services.VelocityService.file.resource.loader.path = /templates
+services.VelocityService.file.resource.loader.path = /templates,/templates/flux
 services.VelocityService.file.resource.loader.cache = false
 services.VelocityService.file.resource.loader.modificationCheckInterval = 2
 
@@ -870,3 +871,4 @@ url.case.folding=lower
 # -------------------------------------------------------------------
 
 include=./Scarab.properties
+include=./Flux.properties
