creating  ScarabModule, as a ModuleEntity and Group implementation. implemented a Scarab version of Turbine's SecurityService that uses the MODULE table instead GROUP.
PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.27 2001/05/24 02:33:30 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.28 2001/05/27 06:38:02 jmcnally Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -421,7 +421,7 @@ services.SchedulerService.classname=org.apache.turbine.services.schedule.Turbine
 #services.XmlRpcService.classname=org.apache.turbine.services.xmlrpc.TurbineXmlRpcService
 services.UniqueIdService.classname=org.apache.turbine.services.uniqueid.TurbineUniqueIdService
 services.UploadService.classname=org.apache.turbine.services.upload.TurbineUploadService
-services.SecurityService.classname=org.apache.turbine.services.security.db.DBSecurityService
+services.SecurityService.classname=org.tigris.scarab.services.ScarabDBSecurityService
 services.PoolBrokerService.classname=org.apache.turbine.services.db.TurbinePoolBrokerService
 services.MapBrokerService.classname=org.apache.turbine.services.db.TurbineMapBrokerService
 services.PullService.classname=org.apache.turbine.services.pull.TurbinePullService
@@ -588,9 +588,9 @@ services.VelocityService.file.resource.loader.path = /templates,/templates/flux
 services.VelocityService.file.resource.loader.cache = false
 services.VelocityService.file.resource.loader.modificationCheckInterval = 2
 
-#services.VelocityService.resource.loader = classpath
-#services.VelocityService.classpath.resource.loader.description = Velocity Classpath Resource Loader
-#services.VelocityService.classpath.resource.loader.class = org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader
+services.VelocityService.resource.loader = classpath
+services.VelocityService.classpath.resource.loader.description = Velocity Classpath Resource Loader
+services.VelocityService.classpath.resource.loader.class = org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader
 
 services.VelocityService.velocimacro.permissions.allow.inline.to.replace.global=true
 
