--- a/src/conf/Scarab.properties
+++ b/src/conf/Scarab.properties
@@ -5,7 +5,7 @@ scarab.email.register.template=email/Confirmation.vm
 
 tool.request.scarabR=org.tigris.scarab.tools.ScarabRequestTool
 tool.global.scarabG=org.tigris.scarab.tools.ScarabGlobalTool
-# tool.request.security=org.tigris.scarab.security.TurbineDBScarabSecurity
+tool.request.security=org.tigris.scarab.security.TurbineDBScarabSecurity
 
 # This name will be used to distinguish specific scarab application
 # from other instances that it may interact with (in the future).
