--- a/src/etc/conf/default/auth.conf
+++ b/src/etc/conf/default/auth.conf
@@ -1,9 +1,6 @@
 // Put login modules providing authentication and realm mappings
-// for specific beans here, for example:
-// mybean {
-//   org.jboss.security.plugins.DatabaseServerLoginModule required db="jdbc/DbJndiName" table="UserTable" name="UserNameColumn" password="UserPswColumn";
-//   com.mycompany.MyRealmMappingLoginModule required param1="value1" param2="value2";
-// };
+// for security domains.
+
 
 simple {
     // Very simple login module: 
@@ -14,17 +11,19 @@ simple {
     org.jboss.security.plugins.samples.SimpleServerLoginModule required;
 };
 
+// Used by clients within the application server VM such as
+// mbeans and servlets that access EJBs.
+client-login {
+    org.jboss.security.ClientLoginModule required;
+};
+
 // The default server login module
 other {
-    // A realistic server login module, which can be used when the number 
+    // A simple server login module, which can be used when the number 
     // of users is relatively small. It uses two properties files:
     //   users.properties, which holds users (key) and their password (value).
     //   roles.properties, which holds users (key) and a comma-separated list of their roles (value).
-    org.jboss.security.plugins.samples.JaasServerLoginModule required;
+    org.jboss.security.auth.spi.JaasServerLoginModule required;
 
-    // For database based authentication comment the line above,
-    // uncomment the line below and adjust the parameters in quotes
-    // Database server login module provides security manager only, no role mapping
-    // org.jboss.security.plugins.DatabaseServerLoginModule required db="jdbc/DbJndiName" table="UserTable" name="UserNameColumn" password="UserPswColumn";
 };
  
