Change default login module to org.jboss.security.auth.spi.UsersRolesLoginModule

--- a/src/etc/conf/default/auth.conf
+++ b/src/etc/conf/default/auth.conf
@@ -23,7 +23,7 @@ other {
     // of users is relatively small. It uses two properties files:
     //   users.properties, which holds users (key) and their password (value).
     //   roles.properties, which holds users (key) and a comma-separated list of their roles (value).
-    org.jboss.security.auth.spi.JaasServerLoginModule required;
+    org.jboss.security.auth.spi.UsersRolesLoginModule required;
 
 };
  
