Change the simple login module to the auth.spi package version

--- a/src/etc/conf/default/auth.conf
+++ b/src/etc/conf/default/auth.conf
@@ -8,7 +8,7 @@ simple {
     // password should either coincide with user name or be null, 
     // all users have role "guest", 
     // users with non-null password also have role "user"
-    org.jboss.security.plugins.samples.SimpleServerLoginModule required;
+    org.jboss.security.auth.spi.SimpleServerLoginModule required;
 };
 
 // Used by clients within the application server VM such as
