--- a/src/java/org/apache/log4j/test/Makefile
+++ b/src/java/org/apache/log4j/test/Makefile
@@ -21,6 +21,7 @@ JSOURCES:= Shallow.java\
  SysoutConfigurator.java\
  UnitTestCategory.java\
  UnitTestCyclicBuffer.java\
+ UnitTestOR.java\
  UnitTestBoundedFIFO.java\
  UnitTestOptionConverter.java\
  SocketAppenderTest.java\
