Added message 9.2.7.h for validating the Remote Interface as throwing valid RMI/IIOP types.

--- a/src/resources/org/jboss/verifier/DefaultMessages.properties
+++ b/src/resources/org/jboss/verifier/DefaultMessages.properties
@@ -74,6 +74,7 @@
 9.2.7.e  =  For each method defined in the remote interface, there must be a matching method in the entity bean's class that has the same name and argument types.
 9.2.7.f  =  For each method defined in the remote interface, there must be a matching method in the entity bean's class that has the same return type.
 9.2.7.g  =  All the exceptions defined in the throws clause of a matching method in the entity bean's class must be defined in the throws clause of the method of the remote interface.
+9.2.7.h  =  The exceptions thrown by methods in the remote interface must be valid types for RMI/IIOP
 
 9.2.8.a  =  Entity bean's home interface must extend the javax.ejb.EJBHome interface.
 9.2.8.b  =  The method arguments in the home interface must be of valid types for RMI/IIOP.
