--- a/src/share/org/apache/tomcat/resources/LocalStrings.properties
+++ b/src/share/org/apache/tomcat/resources/LocalStrings.properties
@@ -1,4 +1,4 @@
-# $Id: LocalStrings.properties,v 1.14 2001/02/05 00:12:04 nacho Exp $
+# $Id: LocalStrings.properties,v 1.15 2001/06/09 00:24:21 costin Exp $
 #
 
 # Localized strings for package org.apache.tomcat.core
@@ -88,51 +88,6 @@ rdi.forward.ise=Cannot forward because the response has already been committed
 serverResponse.outputStream.ise=getWriter() has already been called
 serverResponse.writer.ise=getOutputStream() has already been called
 
-sc.100=Continue
-sc.101=Switching Protocols
-sc.200=OK
-sc.201=Created
-sc.202=Accepted
-sc.203=Non-Authoritative Information
-sc.204=No Content
-sc.205=Reset Content
-sc.206=Partial Content
-sc.207=Multi-Status
-sc.300=Multiple Choices
-sc.301=Moved Permanently
-sc.302=Moved Temporarily
-sc.303=See Other
-sc.304=Not Modified
-sc.305=Use Proxy
-sc.307=Temporary Redirect
-sc.400=Bad Request
-sc.401=Unauthorized
-sc.402=Payment Required
-sc.403=Forbidden
-sc.404=Not Found
-sc.405=Method Not Allowed
-sc.406=Not Acceptable
-sc.407=Proxy Authentication Required
-sc.408=Request Timeout
-sc.409=Conflict
-sc.410=Gone
-sc.411=Length Required
-sc.412=Precondition Failed
-sc.413=Request Entity Too Large
-sc.414=Request-URI Too Long
-sc.415=Unsupported Media Type
-sc.416=Requested Range Not Satisfiable
-sc.417=Expectation Failed
-sc.422=Unprocessable Entity
-sc.424=Failed Dependency
-sc.500=Internal Server Error
-sc.501=Not Implemented
-sc.502=Bad Gateway
-sc.503=Service Unavailable
-sc.504=Gateway Timeout
-sc.505=HTTP Version Not Supported
-sc.507=Insufficient Storage
-
 servletOutputStreamImpl.reset.ise=can't reset buffer after writing to client
 servletOutputStreamImpl.setbuffer.ise=setting buffer after writing to the writer
 
@@ -165,10 +120,6 @@ standardSession.setAttribute.ise=setAttribute: Session already invalidated
 
 # Utils
 ascii.parseInit.nfe=number formatting error {0}
-hexUtil.bad=Bad hexadecimal digit
-hexUtil.odd=Odd number of hexadecimal digits
-httpDate.pe=invalid date format: {0}
-httpDate.iae=array too small: {0}
 messageBytes.iae=invalid date format: {0}
 mimeHeaderField.int.nfe=number formatting error
 mimeHeaderField.date.iae=invalid date format
