we now use the non-ecs version of the VelocityLayout so that we can more easily control the doctype header in the templates by simply putting it into the layout for the page.

--- a/src/conf/TurbineResources.properties
+++ b/src/conf/TurbineResources.properties
@@ -1,5 +1,5 @@
 # -------------------------------------------------------------------
-# $Id: TurbineResources.properties,v 1.28 2001/05/27 06:38:02 jmcnally Exp $
+# $Id: TurbineResources.properties,v 1.29 2001/06/11 00:13:32 jon Exp $
 #
 # This is the configuration file for Turbine.
 #
@@ -572,7 +572,7 @@ tool.ui.skin=default
 services.VelocityService.template.extension=vm
 services.VelocityService.default.page = ScarabPage
 services.VelocityService.default.screen=VelocityScreen
-services.VelocityService.default.layout = VelocityECSLayout
+services.VelocityService.default.layout = VelocityOnlyLayout
 services.VelocityService.default.navigation=VelocityNavigation
 services.VelocityService.default.error.screen = VelocityErrorScreen
 services.VelocityService.default.layout.template = /default.vm
